[gd_scene load_steps=9 format=2]

[ext_resource path="res://Crafting.gd" type="Script" id=1]
[ext_resource path="res://Hud/CraftingTableHUD.png" type="Texture" id=2]
[ext_resource path="res://Food/PustaMiska.png" type="Texture" id=3]
[ext_resource path="res://Hud/ChestEmptyTile64x64.png" type="Texture" id=4]
[ext_resource path="res://Hud/ExitArrowChestCraft.png" type="Texture" id=5]
[ext_resource path="res://Material/Szpula.png" type="Texture" id=6]
[ext_resource path="res://Food/Bait.png" type="Texture" id=7]
[ext_resource path="res://Material/Wedka.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
margin_left = -533.0
margin_top = -250.0
margin_right = 197.0
margin_bottom = 250.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ScrollContainer"]
margin_right = 680.0
margin_bottom = 524.0
rect_min_size = Vector2( 680, 500 )
__meta__ = {
"_edit_lock_": true
}

[node name="Miska" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 128.0
rect_min_size = Vector2( 580, 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Miska"]
margin_left = 300.0
margin_top = 16.0
margin_right = 480.0
margin_bottom = 14.0
text = "Miska"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opis" type="Label" parent="Background/ScrollContainer/VBoxContainer/Miska"]
margin_left = 250.0
margin_top = 32.0
margin_right = 530.0
margin_bottom = 96.0
text = "Pozwala stworzyc miske
przydatne do pozniejszego przetrzywania zupy"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="Przycisk_Miska" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Miska"]
margin_left = 100.0
margin_top = 32.0
margin_right = 163.109
margin_bottom = 96.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Szpula" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 680.0
margin_bottom = 260.0
rect_min_size = Vector2( 580, 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Szpula"]
margin_left = 300.0
margin_top = 16.0
margin_right = 480.0
margin_bottom = 14.0
text = "Miska"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opis" type="Label" parent="Background/ScrollContainer/VBoxContainer/Szpula"]
margin_left = 250.0
margin_top = 32.0
margin_right = 530.0
margin_bottom = 96.0
text = "Pozwala stworzyc miske
przydatne do pozniejszego przetrzywania zupy"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="Przycisk_Szpula" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Szpula"]
margin_left = 100.0
margin_top = 32.0
margin_right = 163.109
margin_bottom = 96.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Przynenta" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 680.0
margin_bottom = 392.0
rect_min_size = Vector2( 580, 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Przynenta"]
margin_left = 300.0
margin_top = 16.0
margin_right = 480.0
margin_bottom = 14.0
text = "Przynenta"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opis" type="Label" parent="Background/ScrollContainer/VBoxContainer/Przynenta"]
margin_left = 250.0
margin_top = 32.0
margin_right = 530.0
margin_bottom = 96.0
text = "Pozwala stworzyc miske
przydatne do pozniejszego przetrzywania zupy"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="Przycisk_Przynenta" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Przynenta"]
margin_left = 100.0
margin_top = 32.0
margin_right = 163.109
margin_bottom = 96.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wedka" type="Panel" parent="Background/ScrollContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 680.0
margin_bottom = 524.0
rect_min_size = Vector2( 580, 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="Name" type="Label" parent="Background/ScrollContainer/VBoxContainer/Wedka"]
margin_left = 300.0
margin_top = 16.0
margin_right = 480.0
margin_bottom = 14.0
text = "Przynenta"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opis" type="Label" parent="Background/ScrollContainer/VBoxContainer/Wedka"]
margin_left = 250.0
margin_top = 32.0
margin_right = 530.0
margin_bottom = 96.0
text = "Pozwala stworzyc miske
przydatne do pozniejszego przetrzywania zupy"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "	"
}

[node name="Przycisk_Wedka" type="TextureButton" parent="Background/ScrollContainer/VBoxContainer/Wedka"]
margin_left = 100.0
margin_top = 32.0
margin_right = 163.109
margin_bottom = 96.0
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 0.994732, 1 )
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wyswietl" type="Container" parent="Background"]
margin_left = 204.0
margin_top = -303.0
margin_right = 583.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Ramka" type="TextureButton" parent="Background/Wyswietl"]
margin_left = 158.0
margin_top = 118.0
margin_right = 222.0
margin_bottom = 182.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Nazwa" type="Label" parent="Background/Wyswietl"]
margin_left = 64.0
margin_top = 90.0
margin_right = 316.0
margin_bottom = 104.0
align = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Jeden_Skladnik" type="Container" parent="Background"]
margin_left = 204.0
margin_top = 3.0
margin_right = 583.0
margin_bottom = 303.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="jeden" type="TextureButton" parent="Background/Jeden_Skladnik"]
margin_left = 158.0
margin_top = 100.0
margin_right = 222.0
margin_bottom = 164.0
rect_min_size = Vector2( 64, 64 )

[node name="need" type="Label" parent="Background/Jeden_Skladnik"]
margin_right = 379.0
margin_bottom = 50.0
align = 1
autowrap = true
lines_skipped = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ilosc1" type="Label" parent="Background/Jeden_Skladnik"]
margin_left = 142.0
margin_top = 125.0
margin_right = 182.0
margin_bottom = 139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Przycisk" type="Container" parent="Background"]
margin_left = 204.0
margin_top = 3.0
margin_right = 583.0
margin_bottom = 303.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Craft_check" type="Button" parent="Background/Przycisk"]
margin_left = 90.0
margin_top = 200.0
margin_right = 290.0
margin_bottom = 250.0
rect_min_size = Vector2( 200, 50 )

[node name="Dwa_Skladniki" type="Container" parent="Background"]
margin_left = 204.0
margin_top = 3.0
margin_right = 583.0
margin_bottom = 303.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="jeden" type="TextureButton" parent="Background/Dwa_Skladniki"]
margin_left = 110.0
margin_top = 100.0
margin_right = 174.0
margin_bottom = 164.0
rect_min_size = Vector2( 64, 64 )

[node name="dwa" type="TextureButton" parent="Background/Dwa_Skladniki"]
margin_left = 206.0
margin_top = 100.0
margin_right = 270.0
margin_bottom = 164.0
rect_min_size = Vector2( 64, 64 )

[node name="need" type="Label" parent="Background/Dwa_Skladniki"]
margin_right = 379.0
margin_bottom = 50.0
align = 1
autowrap = true
lines_skipped = 1

[node name="ilosc1" type="Label" parent="Background/Dwa_Skladniki"]
margin_left = 94.0
margin_top = 125.0
margin_right = 134.0
margin_bottom = 139.0

[node name="ilosc2" type="Label" parent="Background/Dwa_Skladniki"]
margin_left = 190.0
margin_top = 125.0
margin_right = 230.0
margin_bottom = 139.0

[node name="Trzy_Skladniki" type="Container" parent="Background"]
margin_left = 204.0
margin_top = 3.0
margin_right = 583.0
margin_bottom = 303.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="jeden" type="TextureButton" parent="Background/Trzy_Skladniki"]
margin_left = 62.0
margin_top = 100.0
margin_right = 126.0
margin_bottom = 164.0
rect_min_size = Vector2( 64, 64 )

[node name="dwa" type="TextureButton" parent="Background/Trzy_Skladniki"]
margin_left = 158.0
margin_top = 100.0
margin_right = 222.0
margin_bottom = 164.0
rect_min_size = Vector2( 64, 64 )

[node name="trzy" type="TextureButton" parent="Background/Trzy_Skladniki"]
margin_left = 254.0
margin_top = 100.0
margin_right = 318.0
margin_bottom = 164.0
rect_min_size = Vector2( 64, 64 )

[node name="need" type="Label" parent="Background/Trzy_Skladniki"]
margin_right = 379.0
margin_bottom = 40.0
align = 1
autowrap = true

[node name="ilosc1" type="Label" parent="Background/Trzy_Skladniki"]
margin_left = 46.0
margin_top = 125.0
margin_right = 86.0
margin_bottom = 139.0

[node name="ilosc2" type="Label" parent="Background/Trzy_Skladniki"]
margin_left = 142.0
margin_top = 125.0
margin_right = 182.0
margin_bottom = 139.0

[node name="ilosc3" type="Label" parent="Background/Trzy_Skladniki"]
margin_left = 238.0
margin_top = 125.0
margin_right = 278.0
margin_bottom = 139.0

[node name="Exit" type="TextureButton" parent="Background"]
margin_left = 506.217
margin_top = -290.824
margin_right = 570.217
margin_bottom = -258.824
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Miska/Przycisk_Miska" to="." method="_on_Przycisk_Miska_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Szpula/Przycisk_Szpula" to="." method="_on_Przycisk_Szpula_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Przynenta/Przycisk_Przynenta" to="." method="_on_Przycisk_Przynenta_pressed"]
[connection signal="pressed" from="Background/ScrollContainer/VBoxContainer/Wedka/Przycisk_Wedka" to="." method="_on_Przycisk_Wedka_pressed"]
[connection signal="pressed" from="Background/Exit" to="." method="_on_Exit_pressed"]
